[package]
name = "toyfio"
version = "0.1.0"
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]
edition = "2018"
repository = "https://github.com/linyinfeng/toyfio"
readme = "README.md"
keywords = ["async", "futures"]
categories = ["network-programming"]

[dependencies]
futures-preview = "0.3.0-alpha.11"
mio = "0.6"
log = "0.4"
pretty_env_logger = "0.3"
